--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
   },
+  "packageManager": "pnpm@8.1.0",
+  "engines": {
+    "node": ">=16.14.0"
+  },
   "publishConfig": {
     "access": "public"
   },
