--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,14 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: git config --global user.email ${{secrets.USER_EMAIL}}
-      - run: git config --global user.name ${{secrets.USER_NAME}}
+      - name: git config
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
       - run: npm install pnpm -g
       - run: pnpm install
       - run: pnpm build
-      - run: export COMMIT_TOKEN=${{secrets.COMMIT_TOKEN}} && pnpm release
+      - run: pnpm release
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
