--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,9 @@ jobs:
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git remote rm origin
+          git remote add origin https://lexmin0412:${{ secrets.GH_TOKEN }}@github.com/lexmin0412/antd-components-enhanced.git
+          git symbolic-ref HEAD refs/heads/main
       - run: npm install pnpm -g
       - run: pnpm install
       - run: pnpm build
