--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "father build",
     "build:watch": "father dev",
+    "capture-website": "node ./scripts/capture-website.mjs",
     "dev": "dumi dev",
     "docs:build": "dumi build",
     "doctor": "father doctor",
@@ -64,6 +65,7 @@
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.0",
     "@umijs/lint": "^4.0.0",
+    "capture-website": "^3.2.0",
     "dumi": "^2.0.2",
     "eslint": "^8.23.0",
     "father": "^4.1.0",
