--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
       - run: npm install pnpm -g
+      - run: git config --global user.email ${{secrets.USER_EMAIL}}
+      - run: git config --global user.name ${{secrets.USER_NAME}}
       - run: pnpm install
       - run: pnpm build
       - run: pnpm release
