--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,6 @@ jobs:
           git config --global user.name ${{secrets.USER_NAME}}
           pnpm install
           pnpm build
-          pnpm release
+      - run: export COMMIT_TOKEN=${{secrets.GH_TOKEN}} && pnpm release
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
