--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,6 @@
 {
   "git": {
-    "commitMessage": "chore: release v${version}"
+    "commitMessage": "chore(release): v${version}"
   },
   "github": {
     "release": true,
@@ -8,7 +8,7 @@
     "tokenRef": "GH_TOKEN"
   },
   "npm": {
-    "publish": false,
+    "publish": true,
     "publishPath": ".",
     "publishArgs": [],
     "tag": null,
@@ -18,5 +18,24 @@
     "versionArgs": [],
     "skipChecks": false,
     "timeout": 10
+  },
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "infile": "CHANGELOG.md",
+      "preset": {
+        "name": "conventionalcommits",
+        "types": [
+          {
+            "type": "feat",
+            "section": "Features"
+          },
+          {
+            "type": "fix",
+            "section": "Bug Fixes"
+          },
+          {}
+        ]
+      }
+    }
   }
 }
