--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@types/antd": "^1.0.0",
     "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.0",
