chore(release-it): release-it 所有配置和 gcm 项目保持一致

--- a/.release-it.json
+++ b/.release-it.json
@@ -5,7 +5,7 @@
   "github": {
     "release": true,
     "releaseName": "v${version}",
-    "tokenRef": "GH_TOKEN"
+    "tokenRef": "COMMIT_TOKEN"
   },
   "npm": {
     "publish": true,
