--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release new version
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   publish-npm:
@@ -12,14 +12,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: 18
           registry-url: https://registry.npmjs.org/
+      - run: git config --global user.email ${{secrets.USER_EMAIL}}
+      - run: git config --global user.name ${{secrets.USER_NAME}}
       - run: npm install pnpm -g
-      - run: |
-          git config --global user.email ${{secrets.USER_EMAIL}}
-          git config --global user.name ${{secrets.USER_NAME}}
-          pnpm install
-          pnpm build
-      - run: export COMMIT_TOKEN=${{secrets.GH_TOKEN}} && pnpm release
+      - run: pnpm install
+      - run: pnpm build
+      - run: export COMMIT_TOKEN=${{secrets.COMMIT_TOKEN}} && pnpm release
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
