--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.23.0",
     "json-rules-engine": "^7.3.0",
